# 1207rust

./: .env.example  .gitignore  ARCHITECTURE_RECOMMENDATION.md  BACKEND_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FEATURES_COMPLETE.md  index.html  package-lock.json  package.json  render-static.yaml  render.yaml  requirements.txt  start.sh  test_backend.py  test_backend_health.py  test_live_data.py  test_service.py  vite.config.ts
.github/workflows/: keep-alive.yml
backend/: data_service.py  main.py  model.py
rust_server/: Cargo.toml  Dockerfile
rust_server/src/: data.rs  main.rs  models.rs
src/: App.css  App.tsx  index.css
src/components/Alerts/: AlertsBadge.tsx  (+1 more)
src/hooks/: useDimensions.ts
src/pages/: AnalyticsTab.tsx  ChartsPage.tsx  ChartsPage.tsx.bak  Dashboard.tsx  LoginPage.tsx  NewsTab.tsx  TradingPage.tsx  WatchlistTab.tsx  WhatIfTab.tsx
src/services/: activity-service.ts  alerts-service.ts  analytics-service.ts  api-client.ts  audit-service.ts  auto-refresh-service.ts  data-service.ts  data-source-config.ts  finnhub-service.ts  market-overview-service.ts  news-feed-service.ts  news-service.ts  theme-service.ts  trading-service.ts  trending-stocks-service.ts  user-profile-service.ts  watchlist-service.ts
src/shaders/: candlestick.frag.glsl  candlestick.vert.glsl  line.frag.glsl  line.vert.glsl
src/state/: auth-context.tsx  ownership.ts  store.ts
src/styles/: mobile.css
src/utils/: sentiment.ts
stonks-daily-temp/backend/: data_service.py  main.py  model.py
stonks-daily-temp/frontend/: app.js
(+49 files in other folders)
