[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework & Async Runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Data & Math
polars = { version = "0.40", features = ["lazy", "default"] } # Fast DataFrames
rand = "0.8"
rand_distr = "0.4" # Distributions for Monte Carlo

# HTTP Client (for external API calls like Yahoo Finance)
reqwest = { version = "0.12", features = ["json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
